<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".RestaurantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#918E42"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/featureImage"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            app:srcCompat="@android:drawable/btn_dialog"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/restaurantNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hkgrotesk_bold"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/restaurantName"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="match_parent"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hkgrotesk_medium"
                android:gravity="center"

                android:text="@string/location"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#CBCBCB"/>

                <TextView
                    android:id="@+id/ratingLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#CBCBCB"
                    android:fontFamily="@font/hkgrotesk_bold"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:text="@string/rating"
                    android:textSize="15sp"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#CBCBCB"/>
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:text="@string/description"
                android:textSize="12sp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#CBCBCB"/>

            <TextView
                android:id="@+id/menuLabel"
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:text="@string/view_menu"
                android:textSize="14sp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:srcCompat="@android:drawable/btn_dialog"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/photosLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:text="@string/photos"
                android:textSize="14sp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    app:srcCompat="@android:drawable/btn_dialog"/>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/contactDetailsLabel"
                android:layout_width="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hkgrotesk_semibold"
                android:text="@string/contact_details"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reservationsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:paddingEnd="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingStart="0dp"
                    android:text="@string/reservations_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/reservationDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:text="@string/reservations_details"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inquiriesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:paddingEnd="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingStart="0dp"
                    android:text="@string/inquiries_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/inquireriesDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:text="@string/inquiries_details"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/facebook_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:paddingEnd="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingStart="0dp"
                    android:text="@string/facebook_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/facebook_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:text="@string/facebook_details"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/twitter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:paddingEnd="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingStart="0dp"
                    android:text="@string/twitter_label"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/twitter_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/hkgrotesk_semibold"
                    android:text="@string/twitter_details"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>